--- a/index.html
+++ b/index.html
@@ -1,194 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Camping</title>
 
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- CSS STYLE -->
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <header class="header-section">
-        <div class="container">
-            <div class="header">
-                <a class="header__logo" href="#">
-                    <img src="./img/logoicon.png" alt="image logo">
-                </a>
-                <ul class="header__nav">
-                    <li class="header__nav-item active"><a href="#">Home</a></li>
-                    <li class="header__nav-item"><a href="#">Services</a></li>
-                    <li class="header__nav-item"><a href="#">Destination</a></li>
-                    <li class="header__nav-item"><a href="#">Events</a></li>
-                    <li class="header__nav-item"><a href="#">Gallery</a></li>
-                    <li class="header__nav-item"><a href="#">Contact us</a></li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="header">
+          <a class="header__logo" href="#">
+            <img src="./img/logoicon.png" alt="image logo" />
+          </a>
+          <ul class="header__nav">
+            <li class="header__nav-item active"><a href="#">Home</a></li>
+            <li class="header__nav-item"><a href="#">Services</a></li>
+            <li class="header__nav-item"><a href="#">Destination</a></li>
+            <li class="header__nav-item"><a href="#">Events</a></li>
+            <li class="header__nav-item"><a href="#">Gallery</a></li>
+            <li class="header__nav-item"><a href="#">Contact us</a></li>
+          </ul>
         </div>
+      </div>
     </header>
 
     <main>
-        <section class="carousel-section">
-            <div class="container-full">
-                <div class="carousel">
-                </div>
-            </div>
-        </section>
+      <section class="carousel-section">
+        <div class="container-full">
+          <div class="carousel"></div>
+        </div>
+      </section>
 
-        <section class="activities-section">
-            <div class="container-full">
-                <div class="activities ">
-                    <div class="activities__title ">
-                        <img src="./img/Group 313.png" alt="image title">
-                        <h2 class="heading_primary">Explore Destination & Activities</h2>
-                    </div>
-                    <div class="activities__content clearfix">
-                        <div class="activities__item">
-                            <div class="activities__card">
-                                <div class="activities__img">
-                                    <img src="./img/product1.png" alt="thumbnail">
-                                    <div class="activities__love">
-                                        <i class="fa fa-heart"></i>
-                                    </div>
-                                </div>
-                                <div class="activities__detail">
-                                    <h3 class="heading__tertiary">Trickle Creek Ranch</h3>
-                                    <p>Book unique camping experiences on over 300,000 campsites</p>
-                                    <button>Read More</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="activities__item">
-                            <div class="activities__card">
-                                <div class="activities__img">
-                                    <img src="./img/product1.png" alt="thumbnail">
-                                    <div class="activities__love">
-                                        <i class="fa fa-heart"></i>
-                                    </div>
-                                </div>
-                                <div class="activities__detail">
-                                    <h3>Trickle Creek Ranch</h3>
-                                    <p>Book unique camping experiences on over 300,000 campsites</p>
-                                    <button>Read More</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="activities__item">
-                            <div class="activities__card">
-                                <div class="activities__img">
-                                    <img src="./img/product1.png" alt="thumbnail">
-                                    <div class="activities__love">
-                                        <i class="fa fa-heart"></i>
-                                    </div>
-                                </div>
-                                <div class="activities__detail">
-                                    <h3>Trickle Creek Ranch</h3>
-                                    <p>Book unique camping experiences on over 300,000 campsites</p>
-                                    <button>Read More</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="activities__item">
-                            <div class="activities__card">
-                                <div class="activities__img">
-                                    <img src="./img/product1.png" alt="thumbnail">
-                                    <div class="activities__love">
-                                        <i class="fa fa-heart"></i>
-                                    </div>
-                                </div>
-                                <div class="activities__detail">
-                                    <h3>Trickle Creek Ranch</h3>
-                                    <p>Book unique camping experiences on over 300,000 campsites</p>
-                                    <button>Read More</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button>View All</button>
-                </div>
+      <section class="activities-section">
+        <div class="container-full">
+          <div class="activities">
+            <div class="activities__title">
+              <img src="./img/Group 313.png" alt="image title" />
+              <h2 class="heading_primary">Explore Destination & Activities</h2>
             </div>
-        </section>
-
-        <section class="contact-section clearfix">
-            <div class="container">
-                <div class="contact">
-                    <div class="contact__left">
-                        <img src="./img/homeicon.png" alt="">
+            <div class="activities__content clearfix">
+              <div class="activities__item">
+                <div class="activities__card">
+                  <div class="activities__img">
+                    <img src="./img/product1.png" alt="thumbnail" />
+                    <div class="activities__love">
+                      <i class="fa fa-heart"></i>
                     </div>
-                    <div class="contact__right">
-                        <h2 class="heading__primary">Let'Shopee Stay in Touch</h2>
-                        <p>Get tracel planning ideas, helpful tips, and stories from our visitiors delivered right to
-                            your inbox.</p>
-                        <div class="contact__social">
-                            <div class="contact__app">
-                                <h3>Download Our App</h3>
-                                <img src="./img/app_store.png" alt="app store">
-                                <img src="./img/google_play.png" alt="google play">
-                            </div>
-                            <div class="contact__follow">
-                                <h3>Follow Us</h3>
-                                <i class="fa-brands fa-square-facebook"></i>
-                                <i class="fa-brands fa-youtube"></i>
-                                <i class="fa-brands fa-instagram"></i>
-                                <i class="fa-brands fa-pinterest"></i>
-                            </div>
-                        </div>
-                    </div>
+                  </div>
+                  <div class="activities__detail">
+                    <h3 class="heading__tertiary">Trickle Creek Ranch</h3>
+                    <p>
+                      Book unique camping experiences on over 300,000 campsites
+                    </p>
+                    <button>Read More</button>
+                  </div>
                 </div>
+              </div>
+              <div class="activities__item">
+                <div class="activities__card">
+                  <div class="activities__img">
+                    <img src="./img/product1.png" alt="thumbnail" />
+                    <div class="activities__love">
+                      <i class="fa fa-heart"></i>
+                    </div>
+                  </div>
+                  <div class="activities__detail">
+                    <h3>Trickle Creek Ranch</h3>
+                    <p>
+                      Book unique camping experiences on over 300,000 campsites
+                    </p>
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </div>
+              <div class="activities__item">
+                <div class="activities__card">
+                  <div class="activities__img">
+                    <img src="./img/product1.png" alt="thumbnail" />
+                    <div class="activities__love">
+                      <i class="fa fa-heart"></i>
+                    </div>
+                  </div>
+                  <div class="activities__detail">
+                    <h3>Trickle Creek Ranch</h3>
+                    <p>
+                      Book unique camping experiences on over 300,000 campsites
+                    </p>
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </div>
+              <div class="activities__item">
+                <div class="activities__card">
+                  <div class="activities__img">
+                    <img src="./img/product1.png" alt="thumbnail" />
+                    <div class="activities__love">
+                      <i class="fa fa-heart"></i>
+                    </div>
+                  </div>
+                  <div class="activities__detail">
+                    <h3>Trickle Creek Ranch</h3>
+                    <p>
+                      Book unique camping experiences on over 300,000 campsites
+                    </p>
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </div>
             </div>
+            <button>View All</button>
+          </div>
+        </div>
+      </section>
 
-        </section>
+      <section class="contact-section clearfix">
+        <div class="container">
+          <div class="contact">
+            <div class="contact__left">
+              <img src="./img/homeicon.png" alt="" />
+            </div>
+            <div class="contact__right">
+              <h2 class="heading__primary">Let'Shopee Stay in Touch</h2>
+              <p>
+                Get tracel planning ideas, helpful tips, and stories from our
+                visitiors delivered right to your inbox.
+              </p>
+              <div class="contact__social">
+                <div class="contact__app">
+                  <h3>Download Our App</h3>
+                  <img src="./img/app_store.png" alt="app store" />
+                  <img src="./img/google_play.png" alt="google play" />
+                </div>
+                <div class="contact__follow">
+                  <h3>Follow Us</h3>
+                  <i class="fa-brands fa-square-facebook"></i>
+                  <i class="fa-brands fa-youtube"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-pinterest"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer-section">
-        <div class="container">
-            <div class="footer ">
-                <div class="footer__text ">
-                    <h3 class="heading__tertiary">Hipcamp is everywhere you want to camp</h3>
-                    <p>Discover unique experiences on ranches, nature preserves, farms, vineyards, and public,
-                        camgrounds across the U.SHOPEE Book tent camping, treehouses, cabins, yurts, primitive
-                        backcountry sites, car camping, airstreams, tiny houses, RV camping, glamping tents and more.
-                    </p>
-                </div>
-                <div class="footer__nav">
-                    <ul>
-                        <li><h3 class="heading__tertiary">Let Us Help You</h3></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Rules & Reservation</a></li>
-                        <li><a href="#">Policies</a></li>
-                        <li><a href="#">Accessibility</a></li>
-                        <li><a href="#">Media Center</a></li>
-                    </ul>
-                    <ul>
-                        <li><h3 class="heading__tertiary">Plan with Us</h3></li>
-                        <li><a href="#">Find Trip Inspiration</a></li>
-                        <li><a href="#">Build a Trip</a></li>
-                        <li><a href="#">Buy a Pass</a></li>
-                        <li><a href="#">Enter a Lottery</a></li>
-                    </ul>
-                    <ul>
-                        <li><h3 class="heading__tertiary">Let Us Help You</h3></li>
-                        <li><a href="#">Your Account</a></li>
-                        <li><a href="#">Your Reservations</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Submit Feedback</a></li>
-                    </ul>
-                </div>
-                <div class="footer__copyright">
-                    <span >&copy; 2020. All rights reserved</span>
-                </div>
+      <div class="container">
+        <div class="footer">
+          <div class="footer__content clearfix">
+            <div class="footer__text">
+              <h3 class="heading__tertiary">
+                Hipcamp is everywhere you want to camp
+              </h3>
+              <p>
+                Discover unique experiences on ranches, nature preserves, farms,
+                vineyards, and public, camgrounds across the U.SHOPEE Book tent
+                camping, treehouses, cabins, yurts, primitive backcountry sites,
+                car camping, airstreams, tiny houses, RV camping, glamping tents
+                and more.
+              </p>
             </div>
+            <div class="footer__nav">
+              <ul>
+                <li><h3 class="heading__tertiary">Let Us Help You</h3></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Rules & Reservation</a></li>
+                <li><a href="#">Policies</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Media Center</a></li>
+              </ul>
+              <ul>
+                <li><h3 class="heading__tertiary">Plan with Us</h3></li>
+                <li><a href="#">Find Trip Inspiration</a></li>
+                <li><a href="#">Build a Trip</a></li>
+                <li><a href="#">Buy a Pass</a></li>
+                <li><a href="#">Enter a Lottery</a></li>
+              </ul>
+              <ul>
+                <li><h3 class="heading__tertiary">Let Us Help You</h3></li>
+                <li><a href="#">Your Account</a></li>
+                <li><a href="#">Your Reservations</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Help Center</a></li>
+                <li><a href="#">Submit Feedback</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__copyright">
+            <span>&copy; 2020. All rights reserved</span>
+          </div>
         </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
